src/test/deca/context/valid/LE/floatfieds.deca
// Description:
//    test les attributs float
//
// Resultats:
//    
//
// Historique:
//    cree le 19/01/2022

class A {
    float x;
    float y = 15;
}
